@@ -1,51 +1,47 @@
-package edu.ncsu.csc.iTrust2.controllers.api;
+package edu.ncsu.csc.itrust2.controllers.api;
+
+import edu.ncsu.csc.itrust2.models.User;
+import edu.ncsu.csc.itrust2.models.enums.AppointmentType;
+import edu.ncsu.csc.itrust2.models.enums.BloodType;
+import edu.ncsu.csc.itrust2.models.enums.Ethnicity;
+import edu.ncsu.csc.itrust2.models.enums.Gender;
+import edu.ncsu.csc.itrust2.models.enums.HouseholdSmokingStatus;
+import edu.ncsu.csc.itrust2.models.enums.PatientSmokingStatus;
+import edu.ncsu.csc.itrust2.models.enums.Role;
+import edu.ncsu.csc.itrust2.models.enums.State;
+import edu.ncsu.csc.itrust2.models.enums.Status;
+import edu.ncsu.csc.itrust2.services.UserService;
+import edu.ncsu.csc.itrust2.utils.LoggerUtil;
 
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import edu.ncsu.csc.iTrust2.models.User;
-import edu.ncsu.csc.iTrust2.models.enums.AppointmentType;
-import edu.ncsu.csc.iTrust2.models.enums.BloodType;
-import edu.ncsu.csc.iTrust2.models.enums.Ethnicity;
-import edu.ncsu.csc.iTrust2.models.enums.Gender;
-import edu.ncsu.csc.iTrust2.models.enums.HouseholdSmokingStatus;
-import edu.ncsu.csc.iTrust2.models.enums.PatientSmokingStatus;
-import edu.ncsu.csc.iTrust2.models.enums.Role;
-import edu.ncsu.csc.iTrust2.models.enums.State;
-import edu.ncsu.csc.iTrust2.models.enums.Status;
-import edu.ncsu.csc.iTrust2.services.UserService;
-import edu.ncsu.csc.iTrust2.utils.LoggerUtil;
-
 /**
- * This class provides GET endpoints for all of the Enums, so that they can be
- * used for creating proper DomainObjects
+ * This class provides GET endpoints for all of the Enums, so that they can be used for creating
+ * proper DomainObjects
  *
  * @author Kai Presler-Marshall
  */
 @RestController
+@RequiredArgsConstructor
 public class APIEnumController extends APIController {
 
-    @Autowired
-    private LoggerUtil  loggerUtil;
-
-    @Autowired
-    private UserService userService;
+    private final UserService userService;
 
     /**
      * Get the blood types
      *
      * @return blood types
      */
-    @GetMapping ( BASE_PATH + "/bloodtype" )
-    public List<Map<String, Object>> getBloodTypes () {
-        return Arrays.asList( BloodType.values() ).stream().map( bt -> bt.getInfo() ).collect( Collectors.toList() );
+    @GetMapping("/bloodtype")
+    public List<Map<String, Object>> getBloodTypes() {
+        return Arrays.stream(BloodType.values()).map(BloodType::getInfo).toList();
     }
 
     /**
@@ -53,9 +49,9 @@ public class APIEnumController extends APIController {
      *
      * @return ethnicity
      */
-    @GetMapping ( BASE_PATH + "/ethnicity" )
-    public List<Map<String, Object>> getEthnicity () {
-        return Arrays.asList( Ethnicity.values() ).stream().map( eth -> eth.getInfo() ).collect( Collectors.toList() );
+    @GetMapping("/ethnicity")
+    public List<Map<String, Object>> getEthnicity() {
+        return Arrays.stream(Ethnicity.values()).map(Ethnicity::getInfo).toList();
     }
 
     /**
@@ -63,9 +59,9 @@ public class APIEnumController extends APIController {
      *
      * @return genders
      */
-    @GetMapping ( BASE_PATH + "/gender" )
-    public List<Map<String, Object>> getGenders () {
-        return Arrays.asList( Gender.values() ).stream().map( gen -> gen.getInfo() ).collect( Collectors.toList() );
+    @GetMapping("/gender")
+    public List<Map<String, Object>> getGenders() {
+        return Arrays.stream(Gender.values()).map(Gender::getInfo).toList();
     }
 
     /**
@@ -73,9 +69,9 @@ public class APIEnumController extends APIController {
      *
      * @return states
      */
-    @GetMapping ( BASE_PATH + "/state" )
-    public List<Map<String, Object>> getStates () {
-        return Arrays.asList( State.values() ).stream().map( st -> st.getInfo() ).collect( Collectors.toList() );
+    @GetMapping("/state")
+    public List<Map<String, Object>> getStates() {
+        return Arrays.stream(State.values()).map(State::getInfo).toList();
     }
 
     /**
@@ -83,24 +79,26 @@ public class APIEnumController extends APIController {
      *
      * @return appointment types
      */
-    @GetMapping ( BASE_PATH + "/appointmenttype" )
-    public List<AppointmentType> getAppointmentTypes () {
-        final User user = userService.findByName( LoggerUtil.currentUser() );
+    @GetMapping("/appointmenttype")
+    public List<AppointmentType> getAppointmentTypes() {
+        final User user = userService.findByName(LoggerUtil.currentUser());
         final Collection<Role> role = user.getRoles();
-        if ( role.contains( Role.ROLE_OD ) ) {
-            return List.of( AppointmentType.GENERAL_CHECKUP, AppointmentType.GENERAL_OPHTHALMOLOGY );
+        if (role.contains(Role.ROLE_OD)) {
+            return List.of(AppointmentType.GENERAL_CHECKUP, AppointmentType.GENERAL_OPHTHALMOLOGY);
         }
 
-        if ( role.contains( Role.ROLE_OPH ) ) {
-            return List.of( AppointmentType.GENERAL_CHECKUP, AppointmentType.GENERAL_OPHTHALMOLOGY,
-                    AppointmentType.OPHTHALMOLOGY_SURGERY );
+        if (role.contains(Role.ROLE_OPH)) {
+            return List.of(
+                    AppointmentType.GENERAL_CHECKUP,
+                    AppointmentType.GENERAL_OPHTHALMOLOGY,
+                    AppointmentType.OPHTHALMOLOGY_SURGERY);
         }
 
-        if ( role.contains( Role.ROLE_HCP ) ) {
-            return List.of( AppointmentType.GENERAL_CHECKUP );
+        if (role.contains(Role.ROLE_HCP)) {
+            return List.of(AppointmentType.GENERAL_CHECKUP);
         }
 
-        return Arrays.asList( AppointmentType.values() );
+        return Arrays.asList(AppointmentType.values());
     }
 
     /**
@@ -108,9 +106,9 @@ public class APIEnumController extends APIController {
      *
      * @return appointment statuses
      */
-    @GetMapping ( BASE_PATH + "/appointmentstatus" )
-    public List<Status> getAppointmentStatuses () {
-        return Arrays.asList( Status.values() );
+    @GetMapping("/appointmentstatus")
+    public List<Status> getAppointmentStatuses() {
+        return Arrays.asList(Status.values());
     }
 
     /**
@@ -118,11 +116,10 @@ public class APIEnumController extends APIController {
      *
      * @return house smoking statuses
      */
-    @GetMapping ( BASE_PATH + "/housesmoking" )
-    public List<HouseholdSmokingStatus> getHouseSmokingStatuses () {
-        final List<HouseholdSmokingStatus> ret = Arrays.asList( HouseholdSmokingStatus.values() ).subList( 1,
-                HouseholdSmokingStatus.values().length );
-        return ret;
+    @GetMapping("/housesmoking")
+    public List<HouseholdSmokingStatus> getHouseSmokingStatuses() {
+        return Arrays.asList(HouseholdSmokingStatus.values())
+                .subList(1, HouseholdSmokingStatus.values().length);
     }
 
     /**
@@ -130,11 +127,9 @@ public class APIEnumController extends APIController {
      *
      * @return patient smoking statuses
      */
-    @GetMapping ( BASE_PATH + "/patientsmoking" )
-    public List<PatientSmokingStatus> getPatientSmokingStatuses () {
-        final List<PatientSmokingStatus> ret = Arrays.asList( PatientSmokingStatus.values() ).subList( 1,
-                PatientSmokingStatus.values().length );
-        return ret;
+    @GetMapping("/patientsmoking")
+    public List<PatientSmokingStatus> getPatientSmokingStatuses() {
+        return Arrays.asList(PatientSmokingStatus.values())
+                .subList(1, PatientSmokingStatus.values().length);
     }
-
 }
