@@ -1,56 +1,56 @@
-package edu.ncsu.csc.iTrust2.services;
+package edu.ncsu.csc.itrust2.services;
 
+import edu.ncsu.csc.itrust2.forms.DiagnosisForm;
+import edu.ncsu.csc.itrust2.models.Diagnosis;
+import edu.ncsu.csc.itrust2.models.OfficeVisit;
+import edu.ncsu.csc.itrust2.models.User;
+import edu.ncsu.csc.itrust2.repositories.DiagnosisRepository;
+import edu.ncsu.csc.itrust2.repositories.OfficeVisitRepository;
+
+import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
-
 import javax.transaction.Transactional;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Component;
 
-import edu.ncsu.csc.iTrust2.forms.DiagnosisForm;
-import edu.ncsu.csc.iTrust2.models.Diagnosis;
-import edu.ncsu.csc.iTrust2.models.OfficeVisit;
-import edu.ncsu.csc.iTrust2.models.User;
-import edu.ncsu.csc.iTrust2.repositories.DiagnosisRepository;
-
 @Component
 @Transactional
+@RequiredArgsConstructor
 public class DiagnosisService extends Service {
 
-    @Autowired
-    private DiagnosisRepository repository;
+    private final DiagnosisRepository repository;
 
-    @Autowired
-    private OfficeVisitService  service;
+    private final ICDCodeService icdCodeService;
 
-    @Autowired
-    private ICDCodeService      icdCodeService;
+    private final OfficeVisitRepository officeVisitRepository;
 
     @Override
-    protected JpaRepository getRepository () {
+    protected JpaRepository getRepository() {
         return repository;
     }
 
-    public Diagnosis build ( final DiagnosisForm form ) {
+    public Diagnosis build(final DiagnosisForm form) {
         final Diagnosis diag = new Diagnosis();
-        diag.setVisit( (OfficeVisit) service.findById( form.getVisit() ) );
-        diag.setNote( form.getNote() );
-        diag.setCode( icdCodeService.findByCode( form.getCode() ) );
-        diag.setId( form.getId() );
-
+        var id = form.getId();
+        if (null != id) {
+            diag.setId(form.getId());
+            diag.setVisit(officeVisitRepository.findById(id).orElse(null));
+        }
+        diag.setNote(form.getNote());
+        diag.setCode(icdCodeService.findByCode(form.getCode()));
         return diag;
     }
 
-    public List<Diagnosis> findByPatient ( final User patient ) {
-        return service.findByPatient( patient ).stream().map( e -> findByVisit( e ) ).flatMap( e -> e.stream() )
-                .collect( Collectors.toList() );
-
+    public List<Diagnosis> findByPatient(final User patient) {
+        return officeVisitRepository.findByPatient(patient).stream()
+                .map(this::findByVisit)
+                .flatMap(Collection::stream)
+                .toList();
     }
 
-    public List<Diagnosis> findByVisit ( final OfficeVisit visit ) {
-        return repository.findByVisit( visit );
+    public List<Diagnosis> findByVisit(final OfficeVisit visit) {
+        return repository.findByVisit(visit);
     }
-
 }
